add episode 7 swagger
