# product-api/data/validation.go
@@ -7,7 +7,7 @@ import (
 	"github.com/go-playground/validator"
 )
 
-// ValidationError wraps the validators FieldError so we don't
+// ValidationError wraps the validators FieldError so we do not
 // expose this to out code
 type ValidationError struct {
 	validator.FieldError
@@ -15,25 +15,82 @@ type ValidationError struct {
 
 func (v ValidationError) Error() string {
 	return fmt.Sprintf(
-		"Key : '%s' Error: Field validation for '%s' failed on the '%s' tag",
+		"Key: '%s' Error: Field validation for '%s' failed on the '%s' tag",
+		v.Namespace(),
+		v.Field(),
+		v.Tag(),
 	)
 }
 
-func (p *Product) Validate() error {
+// ValidationErrors is a collection of ValidationError
+type ValidationErrors []ValidationError
+
+// Errors converts the slice into a string slice
+func (v ValidationErrors) Errors() []string {
+	errs := []string{}
+	for _, err := range v {
+		errs = append(errs, err.Error())
+	}
+
+	return errs
+}
+
+// Validation contains
+type Validation struct {
+	validate *validator.Validate
+}
+
+// NewValidation creates a new Validation type
+func NewValidation() *Validation {
 	validate := validator.New()
 	validate.RegisterValidation("sku", validateSKU)
 
-	return validate.Struct(p)
+	return &Validation{validate}
 }
 
-func validateSKU(fl validator.FieldLevel) bool {
-	// sku is of format abc-absd-dfsdf
-	re := regexp.MustCompile(`[a-z]+-[a-z]+-[a-z]+`)
-	matches := re.FindAllString(fl.Field().String(), -1)
+// Validate the item
+// for more detail the returned error can be cast into a
+// validator.ValidationErrors collection
+//
+// if ve, ok := err.(validator.ValidationErrors); ok {
+//			fmt.Println(ve.Namespace())
+//			fmt.Println(ve.Field())
+//			fmt.Println(ve.StructNamespace())
+//			fmt.Println(ve.StructField())
+//			fmt.Println(ve.Tag())
+//			fmt.Println(ve.ActualTag())
+//			fmt.Println(ve.Kind())
+//			fmt.Println(ve.Type())
+//			fmt.Println(ve.Value())
+//			fmt.Println(ve.Param())
+//			fmt.Println()
+//	}
+func (v *Validation) Validate(i interface{}) ValidationErrors {
+	errs := v.validate.Struct(i).(validator.ValidationErrors)
 
-	if len(matches) != 1 {
-		return false
+	if len(errs) == 0 {
+		return nil
 	}
 
-	return true
+	var returnErrs []ValidationError
+	for _, err := range errs {
+		// cast the FieldError into our ValidationError and append to the slice
+		ve := ValidationError{err.(validator.FieldError)}
+		returnErrs = append(returnErrs, ve)
+	}
+
+	return returnErrs
+}
+
+// validateSKU
+func validateSKU(fl validator.FieldLevel) bool {
+	// SKU must be in the format abc-abc-abc
+	re := regexp.MustCompile(`[a-z]+-[a-z]+-[a-z]+`)
+	sku := re.FindAllString(fl.Field().String(), -1)
+
+	if len(sku) == 1 {
+		return true
+	}
+
+	return false
 }
