# product-api/handlers/delete.go
@@ -7,14 +7,14 @@ import (
 )
 
 // swagger:route DELETE /products/{id} products deleteProduct
-// Returns a list of products
+// Update a products details
+//
 // responses:
-//	201: noContent
-//	404: errorResponse
-//	501: errorResponse
+//	201: noContentResponse
+//  404: errorResponse
+//  501: errorResponse
 
-// Delete removes a product with the given id from the DB
-// if in not exists returns error not found
+// Delete handles DELETE requests and removes items from the database
 func (p *Products) Delete(rw http.ResponseWriter, r *http.Request) {
 	id := getProductID(r)
 
@@ -25,8 +25,7 @@ func (p *Products) Delete(rw http.ResponseWriter, r *http.Request) {
 		p.l.Println("[ERROR] deleting record id does not exist")
 
 		rw.WriteHeader(http.StatusNotFound)
-
-		data.ToJSON(&GenericError{Message: err.Error(), rw})
+		data.ToJSON(&GenericError{Message: err.Error()}, rw)
 		return
 	}
 
@@ -34,8 +33,9 @@ func (p *Products) Delete(rw http.ResponseWriter, r *http.Request) {
 		p.l.Println("[ERROR] deleting record", err)
 
 		rw.WriteHeader(http.StatusInternalServerError)
-		data.ToJSON(&GenericError{Message: err.Error(), rw})
+		data.ToJSON(&GenericError{Message: err.Error()}, rw)
 		return
 	}
+
 	rw.WriteHeader(http.StatusNoContent)
 }
