# product-api/handlers/post.go
@@ -6,18 +6,19 @@ import (
 	"github.com/Akanibekuly/Microservices/product-api/data"
 )
 
-// swagger:route POST /products products createProducts
-// cerate a new product
+// swagger:route POST /products products createProduct
+// Create a new product
 //
 // responses:
-// 		200: productResponse
-// 400: errorValidation
-// 501: errorResponse
+//	200: productResponse
+//  422: errorValidation
+//  501: errorResponse
 
 // Create handles POST requests to add new products
 func (p *Products) Create(rw http.ResponseWriter, r *http.Request) {
-	//fetch the product from the context
+	// fetch the product from the context
 	prod := r.Context().Value(KeyProduct{}).(data.Product)
-	p.l.Printf()
+
+	p.l.Printf("[DEBUG] Inserting product: %#v\n", prod)
 	data.AddProduct(prod)
 }
