# product-api/handlers/products.go
@@ -19,38 +19,38 @@ type Products struct {
 	v *data.Validation
 }
 
-// NewProducts creates a products handler with the given logger and validation
+// NewProducts returns a new products handler with the given logger
 func NewProducts(l *log.Logger, v *data.Validation) *Products {
 	return &Products{l, v}
 }
 
 // ErrInvalidProductPath is an error message when the product path is not valid
-var ErrInvalidProductPath = fmt.Errorf("Invalid path, path should be path/[id]")
+var ErrInvalidProductPath = fmt.Errorf("Invalid Path, path should be /products/[id]")
 
 // GenericError is a generic error message returned by a server
 type GenericError struct {
 	Message string `json:"message"`
 }
 
-// ValidationErorr is a collection of validation error messages
-type ValidationErorr struct {
+// ValidationError is a collection of validation error messages
+type ValidationError struct {
 	Messages []string `json:"messages"`
 }
 
-// getProductID returns returns the product id from the URL
-// Panics if cannot convert the id into integer
+// getProductID returns the product ID from the URL
+// Panics if cannot convert the id into an integer
 // this should never happen as the router ensures that
 // this is a valid number
 func getProductID(r *http.Request) int {
-	//parse the product ID from the URL
+	// parse the product id from the url
 	vars := mux.Vars(r)
 
-	//convert the id into the integer and return
+	// convert the id into an integer and return
 	id, err := strconv.Atoi(vars["id"])
-	fmt.Println(id)
 	if err != nil {
-		//should never happen
+		// should never happen
 		panic(err)
 	}
+
 	return id
 }
