# product-api/handlers/put.go
@@ -6,28 +6,30 @@ import (
 	"github.com/Akanibekuly/Microservices/product-api/data"
 )
 
-// swagger:route PUT /products products updateProducts
+// swagger:route PUT /products products updateProduct
 // Update a products details
 //
 // responses:
-//		201: noContentResponse
-//	404: errorResponse
-//	422: errorValidation
+//	201: noContentResponse
+//  404: errorResponse
+//  422: errorValidation
 
-// Update handles PUT requests to update product
-func (p Products) Update(rw http.ResponseWriter, r *http.Request) {
-	// fetch the product from the content
+// Update handles PUT requests to update products
+func (p *Products) Update(rw http.ResponseWriter, r *http.Request) {
+
+	// fetch the product from the context
 	prod := r.Context().Value(KeyProduct{}).(data.Product)
 	p.l.Println("[DEBUG] updating record id", prod.ID)
 
-	err = data.UpdateProduct(prod)
+	err := data.UpdateProduct(prod)
 	if err == data.ErrProductNotFound {
 		p.l.Println("[ERROR] product not found", err)
+
 		rw.WriteHeader(http.StatusNotFound)
-		data.ToJSON(&GenericError{Message: "Product not found in databadse"}, rw)
+		data.ToJSON(&GenericError{Message: "Product not found in database"}, rw)
 		return
 	}
 
-	//write the no content success header
+	// write the no content success header
 	rw.WriteHeader(http.StatusNoContent)
 }
